--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>פרחי אהרון - חטיבה</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -441,9 +441,50 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/database.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/app.js"></script>
+    <!-- Fallback for database.js -->
+    <script>
+        // Fallback if database.js fails to load
+        console.log('📁 Loading database manager...');
+        window.dbManager = {
+            makeRequest: async () => { 
+                console.error('Database manager not loaded');
+                throw new Error('Database manager not loaded'); 
+            },
+            getAnnouncements: async () => {
+                console.log('📢 Using fallback announcements');
+                return [];
+            },
+            getClasses: async () => {
+                console.log('🏫 Using fallback classes');
+                return [];
+            },
+            getAssignments: async () => {
+                console.log('📚 Using fallback assignments');
+                return [];
+            },
+            getEvents: async () => {
+                console.log('📅 Using fallback events');
+                return [];
+            },
+            getMedia: async () => {
+                console.log('🖼️ Using fallback media');
+                return [];
+            },
+            getUsers: async () => {
+                console.log('👥 Using fallback users');
+                return [];
+            },
+            getTeachers: async () => {
+                console.log('👨‍🏫 Using fallback teachers');
+                return [];
+            }
+        };
+    </script>
+
+    <!-- Load JavaScript files -->
+    <script src="/js/auth.js"></script>
+    <script src="/js/database.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
