--- a/client/index.html
+++ b/client/index.html
@@ -441,50 +441,10 @@
         </div>
     </div>
 
-    <!-- Fallback for database.js -->
-    <script>
-        // Fallback if database.js fails to load
-        console.log('📁 Loading database manager...');
-        window.dbManager = {
-            makeRequest: async () => { 
-                console.error('Database manager not loaded');
-                throw new Error('Database manager not loaded'); 
-            },
-            getAnnouncements: async () => {
-                console.log('📢 Using fallback announcements');
-                return [];
-            },
-            getClasses: async () => {
-                console.log('🏫 Using fallback classes');
-                return [];
-            },
-            getAssignments: async () => {
-                console.log('📚 Using fallback assignments');
-                return [];
-            },
-            getEvents: async () => {
-                console.log('📅 Using fallback events');
-                return [];
-            },
-            getMedia: async () => {
-                console.log('🖼️ Using fallback media');
-                return [];
-            },
-            getUsers: async () => {
-                console.log('👥 Using fallback users');
-                return [];
-            },
-            getTeachers: async () => {
-                console.log('👨‍🏫 Using fallback teachers');
-                return [];
-            }
-        };
-    </script>
-
-    <!-- Load JavaScript files -->
+    <!-- Load JavaScript files in CORRECT order -->
+    <script src="/js/app.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/database.js"></script>
     <script src="/js/ui.js"></script>
-    <script src="/js/app.js"></script>
 </body>
 </html>
