--- a/client/index.html
+++ b/client/index.html
@@ -460,11 +460,10 @@
         </div>
     </div>
 
-    <!-- Load JavaScript files in CORRECT order -->
-    <script src="/js/app.js"></script>
+    <!-- 🔥 FIX: Load JavaScript files in CORRECT order -->
     <script src="/js/auth.js"></script>
     <script src="/js/database.js"></script>
     <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
-
