--- a/client/index.html
+++ b/client/index.html
@@ -619,9 +619,9 @@
         </div>
     </div>
 
-    <script src="/js/auth.js"></script>
-    <script src="/js/database.js"></script>
-    <script src="/js/ui.js"></script>
-    <script src="/js/app.js"></script>
+    <script type="module" src="/js/auth.js"></script>
+    <script type="module" src="/js/database.js"></script>
+    <script type="module" src="/js/ui.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
